# sxlm-liquid-staking

./: .gitignore  Cargo.toml  README.md  package-lock.json  pitch-deck.html
contracts/sxlm-token/: Cargo.toml
contracts/sxlm-token/src/: lib.rs  test.rs
contracts/sxlm-token/test_snapshots/test/: test_approve_and_transfer_from.1.json  test_approve_zero_removes_allowance.1.json  test_burn.1.json  test_burn_from.1.json  test_burn_insufficient_balance.1.json  test_burn_self.1.json  test_cannot_reinitialize.1.json  test_initialize.1.json  test_mint.1.json  test_mint_multiple_users.1.json  test_mint_zero_amount.1.json  test_set_minter.1.json  test_transfer.1.json  test_transfer_from_insufficient_allowance.1.json  test_transfer_insufficient_balance.1.json  test_transfer_zero_amount.1.json
contracts/vault/: Cargo.toml
contracts/vault/src/: lib.rs  test.rs  yield_strategy.rs
contracts/yield-strategy/: Cargo.toml
contracts/yield-strategy/src/: lib.rs
deployments/: testnet.json
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: GridMotion.tsx
frontend/src/lib/: stellar.ts
scripts/: admin.sh  auto_yield.sh  interact.sh  setup-cron.sh  soroswap_yield.sh  yield-bot.sh
